Update src/test/java/io/company/brewcraft/service/impl/SimpleUpdateServiceTest.java
Co-authored-by: Rishab Manocha <mrishab@users.noreply.github.com>